# marty-cli

./: .coverage  .pre-commit-config.yaml  CLAUDE.md  FINAL.md  README.md  TEST.md  TEST2.md  TEST3.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: issue-implementation.yml  issue-triage.yml  marty-pr-review.yml  mypy.yml  pr-fix.yml  pr-review.yml  pytest.yml  release.yml  sync-test.yml
docs/cicd/: releases.md
docs/features/: workflows.md
docs/workflows/: pr-complete.md
src/marty_cli/: __init__.py  __main__.py  workflow_manager.py
src/marty_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/marty_cli/workflows/: ci.yml  issue-discussion.yml  pr-discussion.yml  pr-initial-analysis.yml  pr-review.yml
tests/: test___main__.py  test_cli.py  test_main.py  test_workflow_manager.py
