[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marty-cli"
version = "0.2.3"
description = "My Python CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
marty-cli = "marty_cli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pytest-cov>=4.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
rich = [
    "rich>=13.0.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
